crates/air/tests/integration/snapshots/integration__help__help-3.snap
---
source: crates/air/tests/integration/help.rs
expression: "Command::new(binary_path()).arg(\"--help\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Air: An R language server and formatter

Usage: air [OPTIONS] <COMMAND>

Commands:
  format           Format a set of files or directories
  language-server  Start a language server
  help             Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global options:
      --log-level <LOG_LEVEL>  The log level [default: warn] [possible values: error, warn, info,
                               debug, trace]
      --no-color               Disable colored output. To turn colored output off, either set this
                               option or set the environment variable `NO_COLOR` to any non-zero
                               value

For help with a specific command, see: `air help <command>`.

----- stderr -----

----- args -----
--help
